src/objects/Rankings__c.object
<CustomObject>
    <fields>
        <fullName>Account_RE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rankings</relationshipLabel>
        <relationshipName>Rankings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Foreign_Desk_Location_ID_RE__c</fullName>
        <externalId>true</externalId>
        <label>CC Foreign Desk Location ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Organization_ID__c</fullName>
        <label>CC Organization ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Organization_Name__c</fullName>
        <label>CC Organization Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Organization_Parent_ID__c</fullName>
        <externalId>true</externalId>
        <label>CC Organization Parent ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Organization_Ranking_ID__c</fullName>
        <externalId>true</externalId>
        <label>CC Organization Ranking ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Person_Forename__c</fullName>
        <label>CC Person Forename</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Person_ID__c</fullName>
        <externalId>true</externalId>
        <label>CC Person ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Person_Organization_ID_RE__c</fullName>
        <externalId>true</externalId>
        <label>CC Person Organization ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Person_Ranking_ID__c</fullName>
        <label>CC Person Ranking ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Person_Surname__c</fullName>
        <label>CC Person Surname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Publication_ID_RE__c</fullName>
        <label>CC Publication ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Publication_Name_RE__c</fullName>
        <label>CC Publication Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Rank_ID_RE__c</fullName>
        <externalId>true</externalId>
        <label>CC Rank ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Ranking_Short__c</fullName>
        <label>CC Ranking Short</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_To_Be_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Delete flag used by Jitterbit when importing/upserting records from the ad-hoc destructive changes to Rankings queries/views</description>
        <label>CC To Be Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Unified_ID_RE__c</fullName>
        <externalId>true</externalId>
        <label>CC Unified ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Department_RE__c</fullName>
        <label>Department</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_RE__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_From_External_Display_RE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude From External Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Foreign_Desk_Location_ID__c</fullName>
        <description>Location Desk ID for Org Rankings</description>
        <inlineHelpText>Location Desk ID for Org Rankings</inlineHelpText>
        <label>Foreign Desk Location ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foreign_Desk_Location__c</fullName>
        <label>Foreign Desk Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foreign_Expertise_Location_ID_RE__c</fullName>
        <label>Foreign Expertise Location ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foreign_Expertise_Location_RE__c</fullName>
        <inlineHelpText>Individual Location of Expertise from CC ForeignExpertiseLocation value</inlineHelpText>
        <label>Location of Expertise</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_ID__c</fullName>
        <label>Location ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Rankings</relationshipLabel>
        <relationshipName>Rankings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related parent Account from the CC Parent Account ID</description>
        <inlineHelpText>Related parent Account from the CC Parent Account ID</inlineHelpText>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rankings (Parent Account)</relationshipLabel>
        <relationshipName>Rankings_as_Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person_RE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact (Lawyer) this Ranking is related to.</description>
        <inlineHelpText>Contact (Lawyer) this Ranking is related to.</inlineHelpText>
        <label>Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Rankings</relationshipLabel>
        <relationshipName>Rankings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person_Ranking_Foreign_Expertise_Id__c</fullName>
        <description>This is the Person Ranking Foreign Expertise Id coming from CC</description>
        <label>Person Ranking Foreign Expertise Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power1__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Practice_Area_ID_RE__c</fullName>
        <label>Practice Area ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_Area_RE__c</fullName>
        <description>Practice Area related to the Ranking</description>
        <inlineHelpText>Practice Area related to the Ranking</inlineHelpText>
        <label>Practice Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_RE__c</fullName>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Rankings</relationshipLabel>
        <relationshipName>Rankings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Publication_Type_ID_RE__c</fullName>
        <label>Publication Type ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Type_RE__c</fullName>
        <label>Publication Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish_On_Website_RE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish On Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ranking_Band_RE__c</fullName>
        <label>Ranking Band</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ranking_Type_RE__c</fullName>
        <label>Ranking Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <label>Ranking</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Description_RE__c</fullName>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order_RE__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubsectionId_RE__c</fullName>
        <label>SubsectionId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subsection_Type_ID_RE__c</fullName>
        <label>Subsection Type ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subsection_Type_RE__c</fullName>
        <label>Subsection Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight_RE__c</fullName>
        <label>Weight</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_RE__c</fullName>
        <label>Year (Issue)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Ranking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account_RE__c</columns>
        <columns>CC_Rank_ID_RE__c</columns>
        <columns>Publication_RE__c</columns>
        <columns>Publication_Type_RE__c</columns>
        <columns>Ranking__c</columns>
        <columns>Ranking_Band_RE__c</columns>
        <columns>Ranking_Type_RE__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Org_Rankings</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account_RE__c</columns>
        <columns>Parent_Account__c</columns>
        <columns>Publication_RE__c</columns>
        <columns>Publication_Type_RE__c</columns>
        <columns>Subsection_Type_RE__c</columns>
        <columns>Ranking__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Rankings__c.Organization_Ranking</value>
        </filters>
        <label>All Org Rankings</label>
    </listViews>
    <listViews>
        <fullName>All_Person_Rankings</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Foreign_Expertise_Location_RE__c</columns>
        <columns>Person_RE__c</columns>
        <columns>Account_RE__c</columns>
        <columns>Publication_RE__c</columns>
        <columns>Publication_Type_RE__c</columns>
        <columns>Subsection_Type_RE__c</columns>
        <columns>Ranking__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Rankings__c.Person_Ranking</value>
        </filters>
        <filters>
            <field>Publication_RE__c</field>
            <operation>contains</operation>
            <value>UK</value>
        </filters>
        <label>All Person Rankings</label>
    </listViews>
    <listViews>
        <fullName>All_Rankings_18_19</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Year_RE__c</columns>
        <columns>Person_RE__c</columns>
        <columns>Account_RE__c</columns>
        <columns>Publication_RE__c</columns>
        <columns>Publication_Type_RE__c</columns>
        <columns>Ranking__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year_RE__c</field>
            <operation>greaterOrEqual</operation>
            <value>2018</value>
        </filters>
        <label>All Rankings 18&amp;19</label>
    </listViews>
    <listViews>
        <fullName>Europe_2019_B_F_Person_Rankings</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Person_RE__c</columns>
        <columns>Account_RE__c</columns>
        <columns>Publication_RE__c</columns>
        <columns>Publication_Type_RE__c</columns>
        <columns>Subsection_Type_RE__c</columns>
        <columns>Ranking__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Rankings__c.Person_Ranking</value>
        </filters>
        <filters>
            <field>Publication_RE__c</field>
            <operation>contains</operation>
            <value>Banking 2019</value>
        </filters>
        <label>Europe 2019 B&amp;F Person Rankings</label>
    </listViews>
    <listViews>
        <fullName>Europe_2019_Person_Rankings</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Person_RE__c</columns>
        <columns>Account_RE__c</columns>
        <columns>Publication_RE__c</columns>
        <columns>Publication_Type_RE__c</columns>
        <columns>Subsection_Type_RE__c</columns>
        <columns>Ranking__c</columns>
        <columns>Practice_Area_RE__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Rankings__c.Person_Ranking</value>
        </filters>
        <filters>
            <field>Publication_RE__c</field>
            <operation>contains</operation>
            <value>Europe 2019,Europe 2018</value>
        </filters>
        <label>Europe 2018 &amp; 2019 Person Rankings</label>
    </listViews>
    <listViews>
        <fullName>Europe_Org_Rankings_18_19</fullName>
        <columns>NAME</columns>
        <columns>Year_RE__c</columns>
        <columns>Account_RE__c</columns>
        <columns>Publication_RE__c</columns>
        <columns>Publication_Type_RE__c</columns>
        <columns>Ranking__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year_RE__c</field>
            <operation>greaterOrEqual</operation>
            <value>2018</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Rankings__c.Organization_Ranking</value>
        </filters>
        <filters>
            <field>Publication_RE__c</field>
            <operation>contains</operation>
            <value>Europe</value>
        </filters>
        <label>Europe Org Rankings 18&amp;19</label>
    </listViews>
    <listViews>
        <fullName>X2018_Org_Rankings_w_Accounts</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account_RE__c</columns>
        <columns>Publication_RE__c</columns>
        <columns>Publication_Type_RE__c</columns>
        <columns>Ranking__c</columns>
        <columns>Subsection_Type_RE__c</columns>
        <columns>SubsectionId_RE__c</columns>
        <columns>Subsection_Type_ID_RE__c</columns>
        <columns>Location_ID__c</columns>
        <columns>Practice_Area_RE__c</columns>
        <columns>Practice_Area_ID_RE__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year_RE__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <filters>
            <field>Account_RE__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Rankings__c.Organization_Ranking</value>
        </filters>
        <label>2018 Org Rankings w/Accounts</label>
    </listViews>
    <listViews>
        <fullName>X2018_Person_Rankings_w_Accounts</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Person_RE__c</columns>
        <columns>Account_RE__c</columns>
        <columns>Publication_RE__c</columns>
        <columns>Publication_Type_RE__c</columns>
        <columns>Ranking__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_RE__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Rankings__c.Person_Ranking</value>
        </filters>
        <filters>
            <field>Person_RE__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Person Rankings w/Accounts</label>
    </listViews>
    <nameField>
        <displayFormat>Rank-{0}</displayFormat>
        <label>Ranking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rankings</pluralLabel>
    <recordTypes>
        <fullName>Organization_Ranking</fullName>
        <active>true</active>
        <label>Organization Ranking</label>
    </recordTypes>
    <recordTypes>
        <fullName>Person_Ranking</fullName>
        <active>true</active>
        <label>Person Ranking</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>